# minimal-fastapi-postgres-template

./: LICENSE  README.md
.github/workflows/: build_docker_image.yml  manual_build_docker_image.yml  tests.yml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/template_fastapi_users/: .env.example  .env.template  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
{{cookiecutter.project_name}}/template_fastapi_users/alembic/versions/: 2022_01_09_1952_initial_fastapi_users_model__57b460a916d4.py
{{cookiecutter.project_name}}/template_fastapi_users/app/: initial_data.py  main.py  models.py  session.py
{{cookiecutter.project_name}}/template_fastapi_users/app/api/: auth_router.py  deps.py
{{cookiecutter.project_name}}/template_fastapi_users/app/core/: config.py  security.py
{{cookiecutter.project_name}}/template_fastapi_users/app/schemas/: user.py
{{cookiecutter.project_name}}/template_fastapi_users/app/tests/: conftest.py  utils.py
{{cookiecutter.project_name}}/template_minimal/: .env.example  .env.template  .gitignore  alembic.ini  pyproject.toml  requirements.txt
{{cookiecutter.project_name}}/template_minimal/app/: initial_data.py
{{cookiecutter.project_name}}/template_minimal/app/core/: config.py
