[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0-alpha"
description = "FastAPI project generated using minimal-fastapi-postgres-template."
authors = ["admin <admin@example.com>"]

[tool.poetry.dependencies]
alembic = "^1.8.1"
asyncpg = "^0.26.0"
celery = "^5.2.7"
fastapi-users = {version = "^10.2.0", extras = ["sqlalchemy2"]}
pydantic = {version = "^1.10.2", extras = ["email"]}
python = "^3.10"
python-dotenv = "^0.21.0"
python-multipart = "^0.5.0"
SQLAlchemy = {version = "^1.4.42", extras = ["asyncio"]}


##a list of all of the optional dependencies
[tool.poetry.extras]
redis = " "
minio = " "
ipython = "^8.5.0"


[tool.poetry.group.dev-dependencies.black]
version = "^22.1.0" 
allow-prereleases = true
python = "3.10"

[tool.poetry.dev-dependencies]
autoflake = "^1.7"
uvicorn = "^0.18.3"
flake8 = "^5.0.1"
isort = "^5.10.1"
requests = "^2.28.1"
coverage = "^6.5.0"
pytest = "^7.1.0"
pytest-asyncio = "^0.20.1"
httpx = "^0.23.0"
sqlalchemy2-stubs = "^0.0.2-alpha.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "app/tests",
]

[tool.isort]
profile = "black"