[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0-alpha"
description = "FastAPI project generated using minimal-fastapi-postgres-template."
authors = ["admin <admin@example.com>"]

[tool.poetry.dependencies]
alembic = "^1.8.1"
asyncpg = "^0.26.0"
celery = "^5.2.7"
fastapi-users = {version = "^10.2.0", extras = ["sqlalchemy", "oauth"]}
fastapi-users-db-sqlalchemy = "^3.0.1"
pydantic = {version = "^1.10.2", extras = ["email"]}
python = "^3.10"
python-dotenv = "^0.21.0"
python-multipart = "^0.5.0"
ReactPy = "^0.0.4"
SQLAlchemy = {version = "^1.4.42", extras = ["asyncio"]}
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.7"
black = "^22.1.0"
uvicorn = "^0.18.3"
flake8 = "^5.0.1"
isort = "^5.10.1"
requests = "^2.28.1"
coverage = "^6.5.0"
pytest = "^7.1.0"
pytest-asyncio = "^0.20.1"
httpx = "^0.23.0"
sqlalchemy2-stubs = "^0.0.2-alpha.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "app/tests",
]

[tool.isort]
profile = "black"