[tool.poetry]
authors = ["admin <admin@example.com>"]
description = "FastAPI project generated using minimal-fastapi-postgres-template."
name = "{{cookiecutter.project_name}}"
version = "0.1.0-alpha"

[tool.poetry.dependencies]
alembic = "^1.8.1"
asyncpg = "^0.26.0"
celery = "^5.2.7"
fastapi = "^0.85.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"]  }
pydantic = { version = "^1.10.2", extras = ["email", "dotenv"] }
PyJWT = { version = "^2.5.0", extras = ["crypto"]  }
python = "^3.10"
python-dotenv = "^0.21.0"
python-multipart = ">=0.0.5,<0.0.6"
ReactPy = "^0.0.4"
SQLAlchemy = { extras = ["asyncio"], version = "^1.4.41" }
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.7.1"
black = "^22.10.0"
coverage = "^6.5.0"
flake8 = "^5.0.4"
httpx = "^0.23.0"
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
sqlalchemy2-stubs = "^0.0.2-alpha.28"
uvicorn = "^0.18.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
filterwarnings = []
markers = ["pytest.mark.asyncio"]
minversion = "6.0"
testpaths = ["app/tests"]

[tool.isort]
profile = "black"
